# OpenCL_lab1

./: CMakeLists.txt
modules/lab1/: CMakeLists.txt  cl.cl  main.cpp
modules/lab2/: CMakeLists.txt  cl.cl  main.cpp
modules/lab3/: cl.cl  main.cpp
src/: main.cpp  vector_add.cl
